--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,10 @@ anthropic==0.18.1
 python-multipart==0.0.6
 pytest==7.4.3
 httpx==0.25.2
-dotenv
+python-dotenv==1.0.0
 tavily-python==0.3.0
 psycopg2-binary==2.9.9
+supabase==2.3.0
+python-jose[cryptography]==3.3.0
+
 
