--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,25 @@
-FROM python:3.11-slim as base
+FROM python:3.11-slim
 
-WORKDIR /debately-backend
+# Prevent Python from writing .pyc files and buffering stdout/stderr
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
+WORKDIR /app
+
+# Install dependencies first (better layer caching)
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
 COPY . .
 
-RUN python -m pip install --no-cache-dir -r requirements.txt
+# Create non-root user for security
+RUN adduser --disabled-password --gecos "" appuser && chown -R appuser:appuser /app
+USER appuser
 
-EXPOSE 8080
+# Railway uses PORT env var, default to 8080
+ENV PORT=8080
+EXPOSE ${PORT}
 
-CMD uvicorn main:app --host 0.0.0.0 --port 8080 --reload
+# Run uvicorn (no --reload for production)
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT}
