feat: add secure centralized config with immutable API keys
create config.py module providing immutable, protected API key storage with fail-fast validation. refactor all services to use centralized config instead of direct environment variable access. add API rate limit enforcement and security verification documentation.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,3 +1,5 @@
+# Used for development purposes only.
+# Containerize FastAPI backend and database for local development.
 services:
   backend:
     build: .
